[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AutoImputer"
version = "0.0.1"
authors = [
  { name="KhashayarRahimi"},
]
description = "A wise imputer that fill missing values for each features by deriving information from other correlated-informative features."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]